# Beam_Element_Section_Property_Tool

./: .gitignore  CMakeLists.txt  GeometryRules.md  README.md
Documents/: Feature6_Export_Module.md
Documents/sample_exports/: box_section_report.txt  h_section_fem_card.txt  h_section_report.txt  sample_box_section_project.txt  sample_h_section_project.txt
Examples/example1/: main.cpp
Examples/example2/: main.cpp
source/API/: API.cpp  API.h
source/Core/: PropertyCalculator.cpp  PropertyCalculator.hpp  SectionExport.cpp  SectionExport.hpp  SectionProjectIO.cpp  SectionProjectIO.hpp
source/GUI/: FEMeshTab.cpp  FEMeshTab.hpp  GeneralTab.cpp  GeneralTab.hpp  MainWindow.cpp  MainWindow.hpp  MeshDisplayWidget.cpp  MeshDisplayWidget.hpp  MeshGenerator.cpp  MeshGenerator.hpp  PreviewShapeAdapter.cpp  PreviewShapeAdapter.hpp  SectionPreviewWidget.cpp  SectionPreviewWidget.hpp  SectionState.cpp  SectionState.hpp  StressPointDefaults.cpp  StressPointDefaults.hpp  StressPointsTab.cpp  StressPointsTab.hpp  main.cpp
source/Tests/: SectionExportTests.cpp  TestRunner.cpp
source/geometry/: GeometryUtils.cpp  GeometryUtils.h  GeometryUtils.hpp  SectionBase.cpp  SectionBase.h  SectionBase.hpp  SectionInput.h  SectionInput.hpp  SectionShape.h  SectionShape.hpp  SectionTypes.h  SectionTypes.hpp
